@@ -1670,7 +1670,9 @@ splitting but slow viewing. Using GVim is the reverse.
 <td class='html'>
 <div class='rdoc comment markup'>
 <p>
-Configurations for splitting Haskell files.
+Configurations for splitting Haskell files. Not that ruby gems tend to
+contain Haskell files, but it allows more easily adding a Rakefile for
+generating codnar documentation into a Haskell project.
 </p>
 </div>
 </td>
@@ -2026,7 +2028,7 @@ number of Git commits by running <tt>rake version</tt>.
 </tr>
 </table>
 <pre class='ruby code syntax'>
-  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.14</span><span class="Special">&quot;</span>
+  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.15</span><span class="Special">&quot;</span>
 
 end
 </pre>
