@@ -1,5 +1,6 @@
 2012-01-07	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
+	* Improve HAskell configuration comment.
 	* Add default configurations for Haskell code.
 
 2011-09-13	Oren Ben-Kiki <github-oren@ben-kiki.org>
